20170913 - fixed overflow for deletion button on tags

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -246,6 +246,7 @@ $button-sizes: (
   small: 0.75rem,
   default: 0.9rem,
   large: 1.25rem,
+  custom: 0.8rem
 );
 $button-opacity-disabled: 0.25;
 
